Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hodr
  name: hodr-service
spec:
  selector:
    app: hodr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
