Kubernetes/hodr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hodr
  name: hodr
  labels:
    app: hodr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hodr
  template:
    metadata:
      labels:
        app: hodr
    spec:
      containers:
      - name: hodr-container
        image: niket50/hodr:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: hodr
  name: hodr-svc
spec:
  selector:
    app: hodr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hodr
  name: hodr
  annotations:
    ingressClassName: nginx
spec:
  rules:
    - host: ec2-65-2-186-48.ap-south-1.compute.amazonaws.com
      http:
        paths:
          - path: /hodr/*
            pathType: Prefix
            backend:
              service:
                name: hodr-svc
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: hodr
  name: hodr
spec:
  podSelector:
    matchLabels:
      app: hodr
  policyTypes:
  - Ingress
  ingress: []
